--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
   },
   "homepage": "https://github.com/451R-Team-Japn/Firebase2#readme",
   "dependencies": {
-    "firebase": "^9.10.0"
+    "firebase": "9.10.0"
   }
 }
