--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -8,10 +8,10 @@ name: Deploy to Firebase Hosting on merge
       - main
 jobs:
   build_and_deploy:
-    runs-on: firebase-tools-11.13.0
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - run: npm install firebase-tools@11.13.0
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
